Fix overflowing UI section.

--- a/src/main/resources/css/blackduck-jira.css
+++ b/src/main/resources/css/blackduck-jira.css
@@ -110,7 +110,8 @@ ul.tab li a:focus, .active {
 }
 
 .longInput {
-    width: 385px;
+    max-width: 400px;
+    width: 100%;
     border: 1px solid #ccc;
     border-radius: 3.01px;
     box-shadow: inset 0 1px 3px #ccc;
